gitops/apps/mlops/account-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  namespace: mlops-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
      - image: vdksystem/mlops-account:v1-0
        imagePullPolicy: IfNotPresent
        name: account-service
        ports:
        - containerPort: 11000
          name: http
