gitops/apps/mlops/account-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: mlops-system
spec:
  ports:
    - port: 80
      name: http
      targetPort: http
      protocol: TCP
  type: ClusterIP
  selector:
    app: account-service
