gitops/apps/mlops/account-service/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: account-service
  namespace: apps
spec:
  hosts:
  - "*"
  gateways:
  - default/mlops
  http:
  - match:
    - uri:
        prefix: /api/v1/accounts
    route:
    - destination:
        host: account-service.apps.svc.cluster.local
        port:
          number: 80
